--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,36 @@ body {
     border: 4px solid red;
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
+
+.examples-container{
+  height: 50px;
+  padding: 16px;
+  background: plum;
+  border: 4px solid indigo;
+  display: flex;
+  justify-content: space-between;
+  gap: 8px;
+}
+
+.section-header{
+    font-size: 24px;
+    font-weight: bold;
+    marin-bottom: 16px;
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    color: white;
+}
+
+.image-container{
+  height: 150px;
+  padding: 16px;
+  background: plum;
+  border: 4px solid indigo;
+  display: flex;
+  justify-content: space-between;
+  gap: 8px;
+}
+
+.img-item{
+    align-items: center;
+    vertical-align: middle;
+}
