--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,6 @@ body {
   border: 4px solid indigo;
   display: flex;
   justify-content: space-between;
-  gap: 8px;
 }
 
 .second{
@@ -45,29 +44,30 @@ body {
 }
 
 .examples-container{
-  height: 50px;
+  height: 40px;
   padding: 16px;
   background: plum;
   border: 4px solid indigo;
   display: flex;
-  justify-content: space-between;
-  gap: 8px;
+  justify-content: center;
+  align-items: center;
+  line-height: 20px;
 }
 
 .section-header{
     font-size: 24px;
     font-weight: bold;
-    marin-bottom: 16px;
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     color: white;
 }
 
 .image-container{
-  height: 150px;
+  height: auto;
   padding: 16px;
   background: plum;
   border: 4px solid indigo;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   gap: 8px;
 }
@@ -75,4 +75,8 @@ body {
 .img-item{
     align-items: center;
     vertical-align: middle;
+    flex-grow: 0;
+    flex-shrink: 0;
+    text-align: center;
+
 }
