--- a/styles.css
+++ b/styles.css
@@ -1,116 +1,149 @@
+@import 'meyer-reset.css';
+
+/* SETTINGS */
+html {
+    --color: #3382F6;
+    --black: #333;
+    --white: #efefef;
+    --dark: #1F2937;
+    --light: lighterblue;
+}
+
+/* SETUP */
+* {
+  box-sizing: border-box;
+}
+picture {
+    display: block;
+}
+img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+a {
+    display: block;
+    color: inherit;
+    text-decoration: none;
+}
+p a, li a {
+    display: inline-block;
+    color: var(--color);
+    text-decoration: underline;
+}
+
+/*DEV STYLES*/
+header, footer, main {
+    border: 4px solid red;
+}
+section {
+    border: 4px solid lime;
+}
+
+/* STRUCTURE */
 body {
-  margin: 0;
-  padding: 0;
-}
-
-.nav-bar{
-  height: 70px;
-  padding: 16px;
-  background: #1F2937;
-  display: flex;
-  flex-grow: 1;
-  justify-content: space-around;
-  gap: 8px;
-}
-
-.nav-item{
-    color: white;
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    opacity: 0.9;
-    background: #7DC8A0;
-    align-items: center;
-    padding: 5px;
-    border-radius: 10px;
-    overflow: hidden;
-    vertical-align: middle;
-}
-
-.nav-item a{
-    line-height: 60px;
-}
-
-.bakery-container{
-  height: 200px;
-  padding: 16px;
-  background: #1F2937;
-  display: flex;
-  justify-content: space-between;
-}
-
-.first{
-    color: white;
-    background: #7DC8A0;
-    padding: 5px;
-    border-radius: 10px;
-    overflow: hidden;
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-}
-
-.second{
-    padding: 5px;
-    overflow: hidden;
-}
-
-.examples-container{
-  height: 20px;
-  padding: 16px;
-  background: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  line-height: 20px;
-}
-
-.section-header{
-    font-size: 24px;
-    font-weight: bold;
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    color: black;
-}
-
-.image-container{
-  padding: 16px;
-  background: white;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 8px;
-  color: blacks;
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  opacity: 0.9;
-}
-
-.img-item{
-    align-items: center;
-    vertical-align: middle;
-    flex-grow: 0;
-    flex-shrink: 0;
-    text-align: center;
-}
-
-.quotation{
-    height: 240px;
-    padding: 16px;
-    background: #E5E7EB;
-    gap: 8px;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    min-height: 100vh;
+}
+main {
+    flex-grow: 1;
+}
+inner-column {
+    display: block;
+    padding: 10px;
+    width: 98%;
+    max-width: 1100px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+}
+header inner-column {
+    padding: 10px;
 }
 
-.quotation p{
-    flex: 0 0 120px;
-    text-color: #1F2937;
-    text-size; 36px;
+/* TYPOGRAPHY */
+.loud-voice {
+    font-family: sans-serif;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: .9;
+}
+@media (min-width: 700px) {
+    .loud-voice {
+        font-size: 40px;
+    }
+}
+.calm-voice {
+    font-family: sans-serif;
+    font-size: 1rem;
+    line-height: 1.3;
 }
 
-.signup-section{
-    height: 180px;
-    padding: 16px;
-    background: plum;
-    gap: 8px;
+/* COMPONENTS */
+.button {
+    font-family: sans-serif;
+    display: inline-block;
+    background-color: var(--color);
+    color: white;
+    font-size: 1.2rem;
+    padding: 0.6em 1em;
+    border-radius: 6px;
+}
+
+product-card {
+    display: block;
+}
+
+/* MODULES */
+graphic-diptych {
+    display: block;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+}
+
+graphic-diptych picture {
+}
+
+graphic-diptych text-content {
+    display: block;
+}
+
+graphic-diptych text-content p {
+    margin-top: 10px;
+}
+
+graphic-diptych text-content .button {
+    margin-top: 10px;
+}
+
+@media (min-width: 700px) {
+   graphic-diptych {
+        flex-direction: row-reverse;
+   }
+   graphic-diptych :is(text-content, picture) {
+        flex-basis: 50%;
+   }
+}
+
+.welcome {
+    background-color: var(--dark);
+    color: var(--white);
+}
+
+products-grid {
+    display: block;
+}
+
+products-grid h2 {
+    text-align: center;
+    padding-bottom: 2vh;
+}
+
+products-grid .product-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    grid-gap: 1em;
 }
